# notefly

./: .gitignore  README  README.md  config.yml  pyproject.toml
src/chat/: __init__.py
src/chat/templates/: index.html
src/notefly/: __init__.py  broker.py  client.py  di.py  kafka_broker.py  message.py
src/notefly/brokers/: __init__.py  interfaces.py  kafka.py  queue.py
src/notefly/templates/: client.html  publish.html  subscribe.html
