[tool.poetry]
name = "notefly"
version = "0.1.0"
description = "Simple notification system"
authors = ["Steven Almeroth <stav@primesite.dev>"]
readme = "README.md"
packages = [{include = "notefly", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.4"
quart-cors = "^0.6.0"
quart-injector = "^0.0.0b1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = "notefly.client:run"
broker = "notefly.broker:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
