[tool.poetry]
name = "notefly"
version = "0.1.0"
description = "Simple notification system"
authors = ["Steven Almeroth <stav@primesite.dev>"]
readme = "README.md"
packages = [{include = "notefly", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


